fix overlapping words problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ div a:hover {
 .project, .guide, .main-cube {
     display: inline-block;
     box-sizing: border-box;
-    width: 24%;
+    width: 40%;
     vertical-align: top;
     padding: 10px;
 }
@@ -141,6 +141,10 @@ div a:hover {
     .nav ul li a {
         font-size: 1em;
     }
+
+    .project, .guide, .main-cube {
+        width: 32%;
+    }
 }
 
 /* desktops and laptops */
@@ -151,5 +155,9 @@ div a:hover {
 
     .nav ul li a {
         font-size: 1em;
+    }
+
+    .project, .guide, .main-cube {
+        width: 24%;
     }
 }
